--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^4.13.1",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
+    "vue-chat-scroll": "^1.3.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
